# O-RAN-SecureSlice-DRL

./: .gitignore  README.md  pyproject.toml
DRL-SSxApp/: DDQN_agentemu.py  DQN_agentemu.py  Dueling_DQN_agentemu.py  common.py  model_inference.py  model_inference_all_slices_proportional_attack.py  model_inference_single_slice_targeted_attack.py
DRL-SSxApp/cdf_data/: ddqn_mal_100_percent.csv  ddqn_mal_25_percent.csv  ddqn_mal_50_percent.csv  dqn_mal_100_percent.csv  dqn_mal_25_percent.csv  dqn_mal_50_percent.csv  dueling_mal_0_percent.csv  dueling_mal_100_percent.csv  dueling_mal_25_percent.csv  dueling_mal_50_percent.csv  plot50percentcdf.asv  plot50percentcdf.m  plotallDDQN.m  plotallDQN.m  plotalldueling.m  plotcdf_dueling.m
DRL-SSxApp/old_scripts/: agent.py  xapp_interface.py
DRL-SSxApp/reward_data/: throughputpersliceandsatisfactionfactor.m  throughputpersliceandsatisfactionfactorallslicesmalicious.m  throughputvsmalicious.m
