[tool.poetry]
name = "O-RAN-SecureSlice-DRL"
version = "0.1.0"
description = ""
authors = ["Joshua Moore <40312633+joshuamoorexyz@users.noreply.github.com>"]
readme = "README.md"


# Don't forget to run `poetry show --outdated` on a regular basis.

[tool.poetry.dependencies]
python = ">=3.10"
torch = ">=2.0.0"
numpy = ">=1.21.0"
pandas = ">=1.3.0"
matplotlib = ">=3.7.0"
scipy = ">=1.14.1"
flake8 = ">=6.1.0"
black = ">=23.9.1"
isort = ">=5.12.0"
pre-commit = ">=3.4.0"

[tool.poetry.dev-dependencies]
# Add development dependencies for linting, testing, etc.
pytest = ">=7.4.0"          # Testing framework
pytest-cov = ">=4.1.0"      # Coverage reporting
mypy = ">=1.6.0"            # Static type checker

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
